2009-11-25  Kenneth Russell  <kbr@google.com>

        Reviewed by Oliver Hunt.

        Off-by-one error in index validation for drawElements and drawArrays
        https://bugs.webkit.org/show_bug.cgi?id=31891

        Fixed computation of number of elements for bound array objects.

        Test: fast/canvas/webgl/index-validation.html

        * html/canvas/WebGLRenderingContext.cpp:
        (WebCore::WebGLRenderingContext::vertexAttribPointer):

2009-11-25  Dmitry Titov  <dimich@chromium.org>

        Reviewed by David Levin.

        Update SharedScript to use eventNames() instead of EventNames()
        https://bugs.webkit.org/show_bug.cgi?id=31890

        * SharedScript/WebKitSharedScript.cpp:
        (WebCore::LoadEventTask::performTask):

2009-11-25  Eric Carlson  <eric.carlson@apple.com>

        Reviewed by Simon Fraser.

        <rdar://problem/7409331> Windows: Support closed caption in <video> element

        Enable closed captions in QuickTime/Windows media engine.

        * platform/graphics/win/MediaPlayerPrivateQuickTimeWin.cpp:
        (WebCore::MediaPlayerPrivate::hasClosedCaptions):
        (WebCore::MediaPlayerPrivate::setClosedCaptionsVisible):
            New, all through to m_qtMovie.

        * platform/graphics/win/MediaPlayerPrivateQuickTimeWin.h:
            Make all but the destructor private since MediaPlayer call through the media
            engine interface.

        * platform/graphics/win/QTMovieWin.cpp:
        (QTMovieWin::disableUnsupportedTracks):
            Use handy new constants for QuickTime track types.
        (QTMovieWin::hasClosedCaptions):
        (QTMovieWin::setClosedCaptionsVisible):
            New, closed caption support.
        * platform/graphics/win/QTMovieWin.h:

        * rendering/RenderMediaControls.cpp:
        (WebCore::RenderMediaControls::paintMediaControlsPart):
            Deal with closed caption buttons.

        * rendering/RenderThemeWin.cpp: